--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV='production' node ./src/server.js",
+    "start": "node ./src/server.js",
     "dev": "NODE_ENV='dev' npx nodemon ./src/server.js"
   },
   "keywords": [],
